se agregaron pages de ux, periodismo, audiovisuales, etc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
+import Hero from '../components/Hero.astro';
 // src/pages/index.astro
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
   <section class="intro">
-    <h2>Bienvenido a mi portfolio</h2>
-    <p>Aquí podrás ver algunos de mis proyectos más recientes.</p>
-    <button onclick="location.href='/juegos'">Ver Proyectos</button>
+    <Hero/>
   </section>
 </Layout>
+
