SE CAMBIO EL BOTON POR UN A

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
 <img src="/yo.jpg" alt="">
 <h2>Bienvenido a mi portfolio</h2>
 <p>Aquí podrás ver algunos de mis proyectos más recientes.</p>
-<button onclick="location.href='/proyectos'">Ver Proyectos</button>
+<a href="/proyectos">Visita mis Proyectos</a>
 </div>
 <style>
     div{
